<resources>
    <string name="app_name">ChicCloth</string>
    <string name="content_description_media">Media content description</string>
    <string name="profile">Profile</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="supporting_text">Description Text</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="order_history">Order\nhistory</string>
    <string name="purchase_history">Purchase\nhistory</string>
    <string name="coupons">Coupons</string>
    <string name="settings">Settings</string>
    <string name="store_service_nsurvey_nquestionnare">Store service\nsurvey\nquestionnare</string>
    <string name="version">Version: 1.0</string>
    <string name="no_notifications">You do not have any notifications</string>
    <string name="notifications">Notifications</string>
    <string name="membership">Membership</string>
    <string name="home_bottom_nav_text">Home</string>
    <string name="category_bottom_nav_text">Category</string>
    <string name="favorite_bottom_nav_text">Favorite</string>
    <string name="notification_bottom_nav_text">Notification</string>
    <string name="membership_bottom_nav_text">Membership</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="withdrawal_from_app_membership">Withdrawal from app Membership</string>
    <string name="logout">Logout</string>
    <string name="address_book">Address Book</string>
    <string name="my_cards">My Cards</string>
    <string name="change_my_password">Change my password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="video_automatic_playback">Video Automatic Playback</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="push_notifications_and_privacy_settings">Push notifications and privacy settings</string>
    <string name="store_locator">Store Locator</string>
    <string name="getting_started">Getting Started</string>
    <string name="faqs">FAQS</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="messages">Messages</string>
    <string name="news">News</string>
    <string name="cart">Cart</string>
    <string name="product_price">%1$s VND</string>
    <string name="share">Share</string>
    <string name="share_content_description">Share button</string>
    <string name="cart_content_description">Cart button</string>
    <string name="product_id">Product ID: %1$s</string>
    <string name="cart_checkout_min">Checkout</string>
    <string name="cart_checkout">Checkout</string>
    <string name="text_item_added">Items added to your cart</string>
    <string name="text_item_total">Item(s) subtotal</string>
    <string name="text_store_inventory_purchase_add_to_cart_complete_message_01">text_store_inventory_purchase_add_to_cart_complete_message_01</string>
    <string name="text_store_inventory_purchase_add_to_cart_complete_message_02">text_store_inventory_purchase_add_to_cart_complete_message_02</string>
    <string name="text_store_inventory_purchase_switch_cart_check_button">text_store_inventory_purchase_switch_cart_check_button</string>
    <string name="text_continue_shopping">Continue shopping</string>
    <string name="cart_delete">Delete</string>
    <string name="cart_apply_coupon">Apply Coupon</string>
    <string name="cart_order_details">Order Details</string>
    <string name="cart_product_total">Product Total</string>
    <string name="cart_shipping_cost">Shipping Cost</string>
    <string name="cart_consumption_tax">Consumption Tax</string>
    <string name="text_alteration_cost">Alteration fee</string>
    <string name="text_flower_purchese_restriction_message_01">text_flower_purchese_restriction_message_01</string>
    <string name="text_notshow_again">Do not show this message again</string>
    <string name="text_close">Close</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_productid_colon">Product ID:</string>
    <string name="text_color_colon">Color:</string>
    <string name="text_size_colon">Size:</string>
    <string name="text_cart">Cart</string>
    <string name="text_error_quantity_limit_item_added">The product is not added to your cart due to purchase quantity limit. Please check the quantity.</string>
    <string name="text_store_inventory_purchase_add_to_cart_alteration_message">text_store_inventory_purchase_add_to_cart_alteration_message</string>
    <string name="text_csoon_early">Available early %s</string>
    <string name="text_limited_offer_until_date">%2$s until %1$s</string>
    <string name="content_description_product_image">Product Image</string>
    <string name="text_only_store_inventory">Only store stock</string>
    <string name="text_symbol_colon">:</string>
    <string name="text_my_size_assist">MySize ASSIST</string>
    <string name="text_length_guide_by_height">Length Guide by Height</string>
    <string name="text_size_compare_with_purchase_product">Size Chart/Compare</string>
    <string name="text_size">Size</string>
    <string name="text_color">Color</string>
    <string name="text_favorite_count">6 Item(s)</string>
    <string name="text_favorite_count_item">%1$d Item(s)</string>
    <string name="text_productid">Product ID</string>
    <string name="text_no_favorite">There are 0 items in favorite.</string>
    <string name="text_favorite_instruction">Press the heart mark to add items on your wish list.</string>
	<string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
	<string name="password">Password</string>
	<string name="forgot_pass">Forgot Password?</string>
    <string name="create_account">Create An Account</string>
    <string name="email">Email</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="phone_number">Phone Number</string>
    <string name="email_regEx"><![CDATA[^(?:[a-z0-9!#$%&\'*+/=?^_`{|}~-]+(?:\\.[a-z0-9!#$%&\'*+/=?^_`{|}~-]+)*|\"(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21\\x23-\\x5b\\x5d-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])*\")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21-\\x5a\\x53-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])+)\\])$]]></string>
    <string name="password_regEx">^(?=.*[A-Z]).{8,}$</string>
    <string name="phone_number_regEx">^0[0-9]{2} [0-9]{3} [0-9]{4}$</string>
    <string name="_84_phone_number_regEx">^[0-9]{2} [0-9]{3} [0-9]{4}$</string>
	<string name="successfulDescription">You have successfully %1$s in our app and start working in it.</string>
    <string name="text_cart_outofstock">This item is currently out of stock. Please remove this item from your cart.</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="decoy_price">784.000 VND</string>
    <string name="decoy_product_name">A shirt</string>
    <string name="cart_total">Total</string>
	<string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
	<string name="remove_item">Remove item</string>
    <string name="remove_item_dialog_message">Are you sure you want to remove this item from your cart?</string>
	<string name="d_item_s">%d item(s)</string>
	<string name="decoy_rating">4.7</string>
    <string name="decoy_reviews_num">(See 5 reviews)</string>
    <string name="decoy_product_description">Linen cotton fabric keep you warm through out the year.</string>
    <string name="decoy_product_id">Product ID: 461343</string>
    <string name="quantity">Quantity</string>
	<string name="add_to_cart">ADD TO CART</string>
    <string name="view_size_chart">View size chart</string>
    <string name="google_maps_key">AIzaSyDuaOUxgO2p1P0KR9YL_Wwfz8Au1n56dhQ</string>
    <string name="order_history_1_line">Order History</string>
    <string name="return_to_membership">Return to Membership</string>
	<string name="text_order_history_count_item">%1$d ITEM(S)</string>
	<string name="cancel_order">Cancel Order</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
	<string name="order_history_details">Order History Details</string>
	<string name="return_to_order_history">Return to Order History</string>
    <string name="text_storesearch_sampletext">Search by Keyword</string>
	<string name="text_product_count_item">%1$d ITEM(S)</string>
	<string name="save_to_phone">Save to phone</string>
	<string name="share_external">Share external</string>
	<string name="text_filter">Filter</string>
	<string name="text_price">Price</string>
	<string name="text_reset">Reset</string>
    <string name="text_view_searchresult">Apply</string>
	<string name="price_range_dash">~</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">Notification description</string>
    <string name="available_quantity">Available quantity: %1$d</string>
</resources>