<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@android:color/white"
	android:tag="layout/dialog_simple_message_bottom_sheet_0">
	
	<TextView
		android:id="@+id/remove_item_dialog_title"
		style="@style/Subtitle1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginVertical="@dimen/s_spacing"
		android:layout_marginStart="@dimen/m_spacing"
		android:layout_marginTop="@dimen/s_spacing"
		android:layout_marginBottom="@dimen/s_spacing"
		android:ellipsize="end"
		android:gravity="center_horizontal"
		android:maxLines="1"
		android:text="@string/remove_item"
		android:textColor="@color/primary_black"
		android:textSize="20sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/remove_item_dialog_message"
		style="@style/Body1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginVertical="@dimen/s_spacing"
		android:layout_marginStart="@dimen/m_spacing"
		android:layout_marginTop="@dimen/s_spacing"
		android:layout_marginBottom="@dimen/s_spacing"
		android:text="@string/remove_item_dialog_message"
		android:textColor="@color/primary_black"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/remove_item_dialog_title" />
	
	<View
		android:id="@+id/separator"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_marginTop="16dp"
		android:background="@color/tertiary_gray_150"
		app:layout_constraintTop_toBottomOf="@+id/remove_item_dialog_message" />
	
	
	<LinearLayout
		android:id="@+id/footer"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@color/primary_white"
		android:elevation="8dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/separator">
		
		
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/footer_cancel_button"
			style="@style/H3"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@android:color/transparent"
			android:foreground="?android:attr/selectableItemBackground"
			android:text="@string/cancel"
			android:textColor="@color/primary_black" />
		
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/footer_remove_button"
			style="@style/H3"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@color/primary_black"
			android:foreground="?android:attr/selectableItemBackground"
			android:text="@string/remove"
			android:textColor="@color/primary_white" />
	
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
