<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/topAppBar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:elevation="2dp"
			app:layout_collapseMode="parallax"
			app:layout_scrollFlags="scroll|enterAlways|snap"
			app:menu="@menu/view_product_menu"
			app:navigationIcon="@drawable/round_arrow_back_24"
			app:title="" />
		<View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:background="@drawable/toolbar_dropshadow"/>
	
	</com.google.android.material.appbar.AppBarLayout>
	
	<androidx.core.widget.NestedScrollView
		android:id="@+id/nestedScrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		android:fitsSystemWindows="true"
		android:overScrollMode="never"
		android:scrollbars="none"
		
		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:orientation="vertical">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingStart="10dp"
				android:paddingEnd="10dp">
				
				<TextView
					android:id="@+id/productNameTextView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/uniqlopro_light"
					android:paddingTop="8dp"
					android:paddingBottom="8dp"
					android:text="@string/decoy_product_name"
					android:textSize="20sp">
				
				</TextView>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					
					<RatingBar
						android:id="@+id/ratingBar"
						style="@style/Widget.AppCompat.RatingBar.Small"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:isIndicator="true"
						android:numStars="5"
						android:paddingTop="2dp"
						
						android:progressTint="@color/primary_black"
						android:rating="3.7"
						android:scrollbarSize="10sp"
						android:stepSize="0.1" />
					
					<TextView
						android:id="@+id/ratingTextView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:fontFamily="@font/roboto_medium_numbers"
						
						android:paddingStart="8dp"
						android:paddingEnd="8dp"
						android:text="@string/decoy_rating"
						android:textSize="16sp"
						android:textStyle="bold" />
					
					<TextView
						android:id="@+id/seeReviewsTextView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:autoLink="all"
						
						android:fontFamily="@font/quicksand_medium"
						
						android:text="@string/decoy_reviews_num"
						android:textSize="14sp" />
				
				</LinearLayout>
				
				<TextView
					android:id="@+id/productHighlightsTextView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="8dp"
					
					android:paddingBottom="8dp"
					android:text="@string/decoy_product_description">
				
				</TextView>
				
				<TextView
					android:id="@+id/productIDTextView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:paddingTop="8dp"
					android:paddingBottom="8dp"
					android:text="@string/decoy_product_id">
				
				</TextView>
			</LinearLayout>
			
			<androidx.viewpager.widget.ViewPager
				android:id="@+id/carousel"
				android:layout_width="match_parent"
				android:layout_height="@dimen/product_image_size"
				android:orientation="horizontal">
			
			</androidx.viewpager.widget.ViewPager>
			
			
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/primary_white"
				android:paddingStart="@dimen/ex_l_spacing"
				android:paddingTop="@dimen/m_spacing"
				android:paddingEnd="@dimen/ex_l_spacing"
				android:tag="layout/cell_product_item_colors_0">
				
				<TextView
					android:id="@+id/colorText"
					style="@style/LabelLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/text_color"
					android:textColor="@color/primary_black"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
				
				<TextView
					android:id="@+id/colorColon"
					style="@style/LabelLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/text_symbol_colon"
					app:layout_constraintStart_toEndOf="@+id/colorText"
					app:layout_constraintTop_toTopOf="@+id/colorText" />
				
				<TextView
					android:id="@+id/selectColorText"
					style="@style/LabelLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:tag="binding_1"
					android:textColor="@color/primary_black"
					app:layout_constraintBaseline_toBaselineOf="@+id/colorColon"
					app:layout_constraintStart_toEndOf="@+id/colorColon" />
				
				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/colorRecycler"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/xs_spacing"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/colorText" />
			
			</androidx.constraintlayout.widget.ConstraintLayout>
			
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/primary_white"
				android:clipToPadding="false"
				android:paddingStart="@dimen/ex_l_spacing"
				android:paddingTop="@dimen/l_spacing"
				android:paddingEnd="@dimen/ex_l_spacing"
				android:tag="layout/cell_product_item_sizes_0">
				
				<TextView
					android:id="@+id/sizeLabel"
					style="@style/LabelLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="binding_1"
					android:text="@string/text_size"
					android:textColor="@color/primary_black"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
				
				<TextView
					android:id="@+id/sizeColon"
					style="@style/LabelLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/text_symbol_colon"
					app:layout_constraintStart_toEndOf="@+id/sizeLabel"
					app:layout_constraintTop_toTopOf="@+id/sizeLabel" />
				
				<TextView
					android:id="@+id/selectSizeText"
					style="@style/LabelLarge"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/xs_spacing"
					android:ellipsize="end"
					android:singleLine="true"
					android:tag="binding_2"
					android:textColor="@color/primary_black"
					app:layout_constraintBaseline_toBaselineOf="@+id/sizeColon"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@+id/sizeColon" />
				
				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/sizeRecycler"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/xs_spacing"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/sizeLabel" />
				
				
				<androidx.appcompat.widget.AppCompatButton
					android:id="@+id/height_length_guide"
					style="@style/Subtitle2"
					android:layout_width="0dp"
					android:layout_height="32dp"
					android:layout_marginTop="@dimen/m_spacing"
					android:background="@drawable/bg_outline_black"
					android:foreground="?attr/selectableItemBackgroundBorderless"
					android:tag="binding_9"
					android:text="@string/text_length_guide_by_height"
					android:textColor="@color/primary_black"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/sizeRecycler" />
				
				<TextView
					android:id="@+id/sizeChartLink"
					style="@style/BodyStandard"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/s_spacing"
					android:drawablePadding="@dimen/xs_spacing"
					android:foreground="?attr/selectableItemBackgroundBorderless"
					android:gravity="center_vertical"
					android:tag="binding_10"
					android:text="@string/text_size_compare_with_purchase_product"
					android:textColor="@color/noticeable"
					app:drawableStartCompat="@drawable/ic_size_chart"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/height_length_guide" />
			</androidx.constraintlayout.widget.ConstraintLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingStart="10dp"
				android:paddingEnd="10dp">
				
				<TextView
					android:id="@+id/productActualPriceTextView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="sans-serif-condensed"
					android:paddingStart="8dp"
					android:paddingTop="8dp"
					android:paddingEnd="8dp"
					
					android:text="@string/decoy_price"
					android:textSize="20sp"
					android:textStyle="bold" />
				
				<TextView
					android:id="@+id/productDiscountPriceTextView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="sans-serif-condensed"
					android:paddingStart="8dp"
					
					android:paddingEnd="8dp"
					android:paddingBottom="8dp"
					android:text="@string/decoy_price"
					android:textColor="@color/primary_red"
					android:textSize="25sp"
					android:textStyle="bold" />
				
				<TextView
					android:id="@+id/productQuantityTextView"
					
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="sans-serif-condensed"
					android:paddingStart="8dp"
					android:paddingTop="8dp"
					android:paddingEnd="8dp"
					android:paddingBottom="8dp"
					
					android:text="@string/quantity"
					android:textSize="13sp" />
				
				<androidx.appcompat.widget.AppCompatSpinner
					android:id="@+id/productQuantitySpinner"
					android:layout_width="200dp"
					android:layout_height="50dp"
					style="@style/Widget.AppCompat.Spinner.Underlined"
					android:entries="@array/productQuantitySpinnerItems"
					android:spinnerMode="dropdown">
				
				</androidx.appcompat.widget.AppCompatSpinner>
				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					>
					
					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/addToCartButton"
						android:layout_width="0dp"
						android:layout_height="60dp"
						android:layout_marginEnd="@dimen/m_spacing"
						android:backgroundTint="@android:color/holo_red_dark"
						android:fontFamily="sans-serif-condensed"
						android:text="@string/add_to_cart"
						android:foreground="?attr/selectableItemBackgroundBorderless"
						android:textColor="@android:color/white"
						android:textSize="16sp"
						android:textStyle="bold"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toLeftOf="@+id/favorite_button_container"
						app:layout_constraintTop_toTopOf="parent">
					
					</androidx.appcompat.widget.AppCompatButton>
					
					<LinearLayout
						android:id="@+id/favorite_button_container"
						android:layout_width="47dp"
						android:layout_height="47dp"
						android:layout_marginTop="6dp"
						android:layout_marginEnd="@dimen/xs_spacing"
						android:foreground="?attr/selectableItemBackgroundBorderless"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						android:clickable="true"
						android:background="@drawable/bg_outline_black"
						android:onClick="onFavoriteButtonClicked"
						android:focusable="true">
						
						<com.group25.ecommercefashionapp.ui.widget.FavoriteCheckBox
							android:id="@+id/favorite_button"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:button="@drawable/check_box_favorite_product"
							android:layout_marginStart="11dp"
							android:foreground="?attr/selectableItemBackgroundBorderless"
							android:clickable="false"
							android:gravity="center"
							android:padding="@dimen/l_spacing" />
					</LinearLayout>
				
				</androidx.constraintlayout.widget.ConstraintLayout>
			
			</LinearLayout>
			
			<androidx.cardview.widget.CardView
				android:id="@+id/membershipCardView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:focusable="true"
				android:layout_marginTop="30dp"
				android:layout_marginBottom="10dp"
				android:foreground="?android:attr/selectableItemBackground"
				app:cardCornerRadius="0dp">
				
				<com.google.android.material.divider.MaterialDivider
					android:id="@+id/itemDivider"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					app:dividerInsetEnd="16dp"
					app:dividerInsetStart="16dp" />
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="16dp">
					
					<TextView
						android:id="@+id/actionNameTxt"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/view_size_chart"
						android:textColor="@color/primary_black"
						android:textSize="15sp">
					
					</TextView>
					
					<View
						android:layout_width="0dp"
						android:layout_height="0dp"
						android:layout_weight="1" />
					
					<com.google.android.material.imageview.ShapeableImageView
						android:layout_width="wrap_content"
						android:layout_height="18dp"
						android:contentDescription="@string/content_description_media"
						app:srcCompat="@drawable/round_keyboard_arrow_right_24" />
				
				</LinearLayout>
				
				<com.google.android.material.divider.MaterialDivider
					android:id="@+id/actionItemDivider"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					app:dividerInsetEnd="16dp"
					app:dividerInsetStart="16dp" />
			</androidx.cardview.widget.CardView>
		
		</LinearLayout>
	
	
	</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
