<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:tag="layout/dialog_cart_added_0">
	
	<TextView
		android:id="@+id/add_to_cart_text"
		style="@style/Subtitle1.NoCaps"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/m_spacing"
		android:text="@string/text_item_added"
		android:textColor="@color/primary_black"
		app:layout_constraintBottom_toTopOf="@+id/divider"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<View
		android:id="@+id/divider"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:layout_marginTop="@dimen/m_spacing"
		android:background="@color/tertiary_gray_150"
		android:tag="binding_1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/add_to_cart_text" />
	
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/add_to_cart_dialog_scroll_view_top_margin"
		android:layout_marginBottom="@dimen/add_to_cart_dialog_scroll_view_bottom_margin"
		android:paddingStart="@dimen/ex_l_spacing"
		android:paddingTop="@dimen/m_spacing"
		android:paddingEnd="@dimen/ex_l_spacing"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<TextView
			android:id="@+id/subtotal_text"
			style="@style/Subtitle2.NoCaps"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/m_spacing"
			android:text="@string/text_item_total"
			android:textColor="@color/primary_black"
			app:layout_constraintEnd_toStartOf="@+id/number_of_items_text"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/number_of_items_text"
			style="@style/Body2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/xs_spacing"
			android:layout_marginTop="@dimen/m_spacing"
			android:textColor="@color/primary_black"
			app:layout_constraintBaseline_toBaselineOf="@+id/subtotal_text"
			app:layout_constraintStart_toEndOf="@+id/subtotal_text"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/price_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/xs_spacing"
			android:fontFamily="@font/uniqlopro_bold"
			android:text="@string/decoy_price"
			android:textColor="@color/primary_black"
			android:textSize="20sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/subtotal_text" />
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/buttons_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">
		
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/checkout_button"
			style="@style/H3"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/ex_l_spacing"
			android:layout_marginTop="@dimen/ex_l_spacing"
			android:layout_marginEnd="@dimen/ex_l_spacing"
			android:layout_marginBottom="@dimen/m_spacing"
			android:background="@color/call_to_action_red"
			android:foreground="?attr/selectableItemBackgroundBorderless"
			android:tag="binding_9"
			android:text="@string/text_checkout"
			android:textColor="@color/primary_white"
			app:layout_constraintBottom_toTopOf="@+id/close_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/close_button"
			style="@style/H3"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/ex_l_spacing"
			android:layout_marginEnd="@dimen/ex_l_spacing"
			android:layout_marginBottom="@dimen/ex_l_spacing"
			android:background="@drawable/bg_outline_black"
			android:foreground="?attr/selectableItemBackgroundBorderless"
			android:tag="binding_10"
			android:text="@string/text_close"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
